<resources>
    <string name="app_name">zentryapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Notification Text Samples -->
    <string name="notification_title_sample">Notification</string>
    <string name="notification_message_sample">This is a sample notification content</string>
    <string name="notification_time_sample">2025-07-26 14:30</string>

    <!-- UI Label -->
    <string name="notifications">Notification</string>
    <string name="notification_title">Notifications</string>
    <string name="notification_empty">You have no new notifications.</string>
    <string name="notification_history_link">Go to notification history</string>
    <string name="notification_settings">Settings</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="delete_notification">Delete notification</string>
    <string name="see_more_notifications">See previous notifications</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="face_id_verification">Face ID Verification</string>
    <string name="scan_your_face_to_register_your_identity">Scan your face to register your identity</string>
    <string name="get_started">Get started</string>
    <string name="hold_still">Hold still</string>


</resources>
